# SocketAsio

./: .gitignore  CMakeLists.txt  README.md
include/libSocketAsio/: AsyncInterface.hpp  CommunicatorInterface.hpp  CommunicatorStateMachine.hpp  Endpoint.hpp  SocketKit.hpp  TCPAcceptor.hpp  TCPConnector.hpp  TCPSocket.hpp  UDPSocket.hpp
src/: TCPAcceptor.cpp  TCPConnector.cpp  TCPSocket.cpp  UDPSocket.cpp
test/: test_asio.cpp
